@@ -12,6 +12,9 @@ Core - General
   - The cms_stylesheet plugin is no longer cachable by smarty.
   - Recommend PHP 5.3.2 or greater.
   - Smarty caching now disabled for PHP 5.2.x
+  - Numerous fixes to FileManager and MicroTiny wrt. advanced mode.
+  - Removes wiki links from admin interface.
+  - Minor fix to ShowMessages.
 
 Version 1.11.2.1
 -----------------------------
